# uwebsocket-benchmark

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  entrypoint_server.sh  package.json  publish.sh
clients/wsgo_client/: Dockerfile  go.mod
clients/wsrust_client/: Cargo.toml  entrypoint.sh
clients/wsrust_client/src/: client.rs  lib.rs  main.rs  sink.rs
clients/wsrust_client/test-result/: result_c10000_b1_n1_w10.csv  result_c10_b1_n1_w10.csv
scripts/: network_delay.sh
servers/uws-server/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
servers/uws-server/src/: main.cc
servers/uwsjs-server/: .gitignore  Dockerfile
servers/wsaxum/: Cargo.toml  entrypoint.sh
servers/wsaxum/src/: main.rs
src/: index.js
wrangler/: generate_results.py  requirements.txt
ws_client/: Dockerfile  entrypoint.sh  recipe.json
ws_client/src/: lib.rs  sink.rs
wsaxum/: Dockerfile
wsgo_client/: client.go  entrypoint.sh
