[package]
name = "ws_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
clap = { version = "4.5.3", features = ["derive"] }
flume = "0.11.0"
futures = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
